# whos-paying-the-doctor

./: .gitignore  HOW_TO_USE.md  OPEN_PAYMENTS_NOTES.md  README.md  SYSTEM_NOTES.md  build_importer.sh  docker-compose.yml  run_importer.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/backend/: __init__.py  connections.py  db.py  es.py  exporter.py
database/src/sql/: schema.sql
download_script/src/: download_dataset.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  ExportResults.js  ResultList.js  SearchBar.js
importer/: Dockerfile  pyproject.toml  requirements.txt
importer/src/: import_script.py
prototyping/download_script/: README.md  pyproject.toml
prototyping/import_script/: pyproject.toml
prototyping/import_script/src/: import_script.py
prototyping/modeling/: README.md
prototyping/modeling/src/: models.py
search/: create_general_payment_index.sh
