[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Service enabling the suggestion, search, and excel export of Open Payment data"
authors = ["Sean Joseph <theseanjoseph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
psycopg = "^3.0.12"
fastapi = "^0.76.0"
elasticsearch = "^8.2.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
