[tool.poetry]
name = "importer"
version = "0.1.0"
description = "Utility to import data into an elasticsearch index"
authors = ["Sean Joseph <theseanjoseph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
elasticsearch = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
