[tool.poetry]
name = "download_script"
version = "0.1.0"
description = "A prototype for the process of downloading and processing Open Payments information"
authors = ["Sean Joseph <theseanjoseph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
