[tool.poetry]
name = "import_script"
version = "0.1.0"
description = ""
authors = ["Sean Joseph <theseanjoseph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = "^3.0.12"
elasticsearch = "^8.2.0"
requests = "^2.27.1"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
